<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/Calculator"
    style="@style/numButtons"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/soft_orange"
        app:layout_constraintStart_toStartOf="@id/button_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        android:text="@string/button9"
        android:textSize="50dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        style="@style/numButtons"
        android:text="@string/button1"
        android:onClick="button1Click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Result"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        style="@style/numButtons"
        android:text="@string/button2"
        android:onClick="button2Click"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@id/Result"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        style="@style/numButtons"
        android:text="@string/button3"
        android:onClick="button3Click"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@id/Result"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        style="@style/numButtons"
        android:text="@string/button4"
        android:onClick="button4Click"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        style="@style/numButtons"
        android:text="@string/button5"
        android:onClick="button5Click"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        style="@style/numButtons"
        android:text="@string/button6"
        android:onClick="button6Click"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        style="@style/numButtons"
        android:text="@string/button7"
        android:onClick="button7Click"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        style="@style/numButtons"
        android:text="@string/button8"
        android:onClick="button8Click"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:onClick="button9Click"
        style="@style/numButtons"
        android:text="@string/button9"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        style="@style/numButtons"
        android:text="@string/button0"
        android:onClick="button0Click"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_8"
        app:layout_constraintStart_toStartOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintVertical_weight="1"
        android:layout_width="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        style="@style/calcButtons"
        android:backgroundTint="@color/design_default_color_surface"
        android:text="@string/button_dot"
        app:layout_constraintTop_toTopOf="@id/button_0"
        app:layout_constraintStart_toEndOf="@id/button_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        style="@style/calcButtons"
        android:onClick="onPlus"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toStartOf="@id/button_multiplication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/calcButtons"
        android:onClick="onMinus"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiplication"
        android:onClick="onMultiple"
        style="@style/calcButtons"
        app:layout_constraintTop_toBottomOf="@id/button_0"
        app:layout_constraintStart_toEndOf="@id/button_plus"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintBottom_toTopOf="@id/button_division"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        android:text="x" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_division"
        android:onClick="onDivision"
        style="@style/calcButtons"
        app:layout_constraintTop_toBottomOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_minus"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1"
        android:text="/" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equally"
        style="@style/calcButtons"
        android:backgroundTint="@color/cardview_dark_background"
        android:layout_weight="1"
        android:onClick="onEqually"
        android:text="@string/equally"
        app:layout_constraintTop_toTopOf="@id/button_multiplication"
        app:layout_constraintStart_toEndOf="@id/button_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/button_division"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintHorizontal_weight="1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>